2025. 1.24. Modified zMat3DSVD. [zeo_mat3d]
2025. 1.24. Added zVec3DDataICP. [zeo_vec3d_profile]
2025. 1.24. Added zVec3DDataPCAFrame. [zeo_vec3d_pca]
2025. 1.24. Added zVec3DDataIdentFrame. [zeo_errmsg, zeo_vec3d_profile]
2025. 1.24. Added zMat3DSVD. [zeo_mat3d]
2025. 1.22. Reflected renaming of zEqual. [zeo_coord2d, test]
2025. 1.18. Added const qualifiers to some functions. [zeo_render_texture, zeo_coord2d]
2025. 1.18. Renamed zRGBDec to zRGBDecodeStr. [zeo_render_color]
2025. 1.18. Applied ZDEF_STRUCT to zRGB and zTexture. [zeo_render_color, zeo_render_texture]
2025. 1.17. Added zVec3DDataNormalVec_Tree. [zeo_vec3d_profile]
2025. 1.17. Renamed zVec3DDataNormalVec to zVec3DDataNormalVec_Octree. [zeo_vec3d_profile]
2025. 1.17. Modified zVec3DDataWritePCDFile. [zeo_vec3d_pcd]
2025. 1.17. Added zVec3DDataToTree. [zeo_vec3d_tree]
2025. 1.17. Added const qualifiers to functions in zeo_vec3d_tree. [zeo_vec3d_tree, zeo_ph_stl]
2025. 1.17. Added _zVec3DTreeVicinityTest, _zVec3DTreeVicinityOpp, zVec3DTreeVicinity, and zVec3DTreeValueFPrint. [zeo_vec3d_tree]
2025. 1.17. Modified zBox3DCreate to automatically normalize axes vectors. [zeo_shape3d_box]
2025. 1.17. Added zAABox3DVert. [zeo_elem3d_aabox]
2025. 1.17. Separated zeo_vec3d_profile from zeo_vec3d_octree, and moved zVec3DDataNormalVec. [zeo_vec3d_octree, zeo_vec3d_profile]
2025. 1.17. Renamed zOctant3D and zOctree3D to zVec3DOctant and zVec3DOctree, respectively. [zeo_vec3d_octree]
2025. 1.17. Renamed zeo_col_octree to zeo_vec3d_octree. [zeo_vec3d_octree]
2025. 1.17. Abolished zOctree3DFPrintZTK. (for an equivalent implementation, see example/pointcloud/octree_test.c) [zeo_col_octree]
2025. 1.17. Modified _zOctant3DVicinity not to use zSphere3D. [zeo_col_octree]
2025. 1.17. Added _zAABox3DEnlarge, and reimplemented zBox3DToAABox3D not to use zVec3DDataAABB. [zeo_shape3d_aabox]
2025. 1.17. Moved zAABox3DToBox3D and zBox3DToAABox3D to zeo_shape3d_box. [zeo_elem3d_aabox, zeo_shape3d_box]