@@ -1,3 +1,7 @@
+2025. 1.29. Modified _zShape3DImportFromZTK to cast an argument obj to a zShape3D pointer (thanks to Kenta Imanishi). [zeo_shape3d]
+2025. 1.29. Modified _zPLYFReadElement to cast a counter to zPLYElemType (thanks to Kenta Imanishi). [zeo_ph_ply]
+2025. 1.29. Modified _zPLYPrpInit to cast a counter to zPLYDATA (thanks to Kenta Imanishi). [zeo_ph_ply]
+2025. 1.29. Added liblzf to LINKCPP in config.tools (thanks to Kenta Imanishi). [tools]
 2025. 1.24. Modified zMat3DSVD. [zeo_mat3d]
 2025. 1.24. Added zVec3DDataICP. [zeo_vec3d_profile]
 2025. 1.24. Added zVec3DDataPCAFrame. [zeo_vec3d_pca]
